[package]
authors = ["Jacob Lindahl <aviator9402@gmail.com>"]
description = "Easily generate furigana for various document formats"
edition = "2021"
name = "autoruby"
version = "0.1.0"

[dependencies]
clap = {version = "4.0.30", features = ["derive"]}
lindera = {version = "0.19.0", features = ["ipadic"]}
nom = "7.1.1"
rusqlite = {version = "0.28.0", features = ["bundled"]}
serde = "1.0.151"
serde_json = "1.0.91"
wana_kana = "2.1.0"
