[package]
authors = ["Jacob Lindahl <aviator9402@gmail.com>"]
categories = ["command-line-utilities", "text-processing", "localization", "accessibility"]
description = "CLI to easily generate furigana for various document formats"
edition = "2021"
license = "GPL-3.0-only"
name = "autoruby-cli"
repository = "https://github.com/encody/autoruby"
version = "0.3.0"

[dependencies]
autoruby = {path = "../autoruby", version = "0.3.0"}
clap = {version = "4", features = ["derive"]}
envy = "0.4"
serde = "1"
tokio = "1"

[[bin]]
name = "autoruby"
path = "src/main.rs"
