[package]
authors.workspace = true
categories = [
    "command-line-utilities",
    "text-processing",
    "localization",
    "accessibility",
]
description = "CLI to easily generate furigana for various document formats"
documentation = "https://docs.rs/autoruby-cli"
edition.workspace = true
license.workspace = true
name = "autoruby-cli"
repository.workspace = true
version.workspace = true

[dependencies]
autoruby = { path = "../autoruby", version = "0.5.1" }
clap = { version = "4", features = ["derive"] }
envy = "0.4"
serde = "1"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "autoruby"
path = "src/main.rs"
