[package]
authors = ["Jacob Lindahl <aviator9402@gmail.com>"]
categories = ["text-processing", "localization", "accessibility"]
description = "Easily generate furigana for various document formats"
edition = "2021"
license = "GPL-3.0-only"
name = "autoruby"
repository = "https://github.com/encody/autoruby"
version = "0.2.0"

[features]
default = ["frequency-full", "integrated"]
frequency-full = ["jmdict/full"]
integrated = ["dep:bincode", "dep:reqwest", "dep:once_cell", "serde"]
serde = ["dep:serde"]

[dependencies]
bincode = {version = "1", optional = true}
jmdict = "2"
lindera-core = "0.24"
lindera-dictionary = "0.24"
lindera-tokenizer = {version = "0.24", features = ["ipadic"]}
nom = "7"
once_cell = {version = "1", optional = true}
reqwest = {version = "0.11", optional = true}
serde = {version = "1", optional = true}
thiserror = "1"
wana_kana = "3"

[build-dependencies]
bincode = {version = "1", optional = true}
dotenvy = "0.15"
jmdict = "2"
nom = "7"
reqwest = {version = "0.11", optional = true}
serde = {version = "1", optional = true}
tokio = {version = "1", features = ["full"]}
