[package]
authors = ["Jacob Lindahl <aviator9402@gmail.com>"]
categories = ["text-processing", "localization", "accessibility"]
description = "Easily generate furigana for various document formats"
edition = "2021"
license = "GPL-3.0-only"
name = "autoruby"
repository = "https://github.com/encody/autoruby"
version = "0.3.2"

[features]
default = ["integrated"]
dummy = ["integrated", "jmdict/db-empty"]
integrated = ["dep:bincode", "dep:reqwest", "dep:once_cell", "serde"]
serde = ["dep:serde"]

[dependencies]
bincode = {version = "1", optional = true}
jmdict = "2"
lindera-core = "0.24"
lindera-dictionary = "0.24"
lindera-tokenizer = {version = "0.24", features = ["unidic"]}
nom = "7"
once_cell = {version = "1", optional = true}
serde = {version = "1", optional = true}
thiserror = "1"
wana_kana = "3"

[dev-dependencies]
pretty_assertions = "1.3"

[build-dependencies]
bincode = {version = "1", optional = true}
dotenvy = "0.15"
jmdict = "2"
nom = "7"
reqwest = {version = "0.11", optional = true}
serde = {version = "1", optional = true}
thiserror = "1"
tokio = {version = "1", features = ["full"]}

[package.metadata.docs.rs]
features = ["dummy"]
