[package]
authors.workspace = true
categories = ["text-processing", "localization", "accessibility"]
description = "Easily generate furigana for various document formats"
documentation = "https://docs.rs/autoruby"
edition.workspace = true
license.workspace = true
name = "autoruby"
repository.workspace = true
version.workspace = true

[features]
default = ["integrated"]
dummy = ["integrated", "jmdict/db-empty"]
integrated = ["dep:bincode", "dep:reqwest", "dep:once_cell", "serde"]
serde = ["dep:serde"]

[dependencies]
bincode = { version = "1", optional = true }
jmdict = "2"
lindera-core = "0.27"
lindera-dictionary = "0.27"
lindera-tokenizer = { version = "0.27", features = ["unidic"] }
nom = "7"
once_cell = { version = "1", optional = true }
serde = { version = "1", optional = true }
thiserror = "1"
wana_kana = "3"

[dev-dependencies]
pretty_assertions = "1.3"

[build-dependencies]
bincode = { version = "1", optional = true }
dotenvy = "0.15"
jmdict = "2"
nom = "7"
reqwest = { version = "0.11", optional = true }
serde = { version = "1", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
features = ["dummy"]
